@@ -59,7 +59,6 @@ LIBRPMDB_0
     headerSetStatbuf;
     headerInit;
     headerIsEntry;
-    headerLink;
     headerLoad;
     headerMacrosLoad;
     headerMacrosUnload;
@@ -76,7 +75,6 @@ LIBRPMDB_0
     headerSetOrigin;
     headerSizeof;
     headerSprintf;
-    headerUnlink;
     headerUnload;
     headerVerifyInfo;
     hGetColor;
